Fix the spacing for back/forward in Yosemite style

--- a/radiant-player-mac/css/yosemite.css
+++ b/radiant-player-mac/css/yosemite.css
@@ -452,6 +452,7 @@ div.simple-dialog-bg {
 
 #gm-back {
     background-image: url(http://radiant-player-mac/images/arrow-left-yosemite.png);
+    margin-right: 1px;
 }
 
 #gm-forward {
